# foros

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  TODO  package.xml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lint.yml  static-analysis.yml
docker/: Dockerfile
docs/: inspector.md
foros/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  package.xml
foros/docs/: foros.hpp
foros/include/akit/failover/foros/: cluster_node.hpp  cluster_node_data_interface.hpp  cluster_node_interface.hpp  cluster_node_lifecycle_interface.hpp  cluster_node_options.hpp  cluster_node_publisher.hpp  cluster_node_service.hpp  cluster_node_template.hpp  command.hpp  commit.hpp  common.hpp  data.hpp
foros/src/: cluster_node.cpp  cluster_node_impl.cpp  cluster_node_impl.hpp  cluster_node_options.cpp  command.cpp  data.cpp
foros/src/common/: node_util.cpp  node_util.hpp  observable.hpp  observer.hpp  state_machine.hpp  void_callback.hpp
foros/src/lifecycle/: event.hpp  state.cpp  state.hpp  state_machine.hpp  state_type.hpp
foros/src/lifecycle/state/: active.cpp  active.hpp  inactive.cpp  inactive.hpp  standby.cpp  standby.hpp
foros/src/raft/: commit_info.hpp  context.cpp  context.hpp  context_store.cpp  context_store.hpp  event.hpp  inspector.cpp  inspector.hpp  log_entry.hpp  other_node.cpp  other_node.hpp  pending_commit.hpp  state.cpp  state.hpp  state_machine.cpp  state_machine.hpp  state_machine_interface.hpp  state_type.hpp
foros/src/raft/state/: candidate.cpp  candidate.hpp  follower.cpp  follower.hpp  leader.cpp  leader.hpp  standby.cpp  standby.hpp
foros/test/: CMakeLists.txt  test_cluster_node.cpp  test_lifecycle_state_machine.cpp  test_raft.cpp  test_raft.hpp  test_raft_with_inspector.cpp
foros_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
foros_examples/src/: cluster_client.cpp  cluster_commit.cpp  cluster_data_replication_by_broadcast.cpp  cluster_data_replication_by_commit.cpp  cluster_election.cpp  cluster_log_replication_with_commit.cpp  cluster_log_replication_without_commit.cpp  cluster_publisher.cpp  cluster_service.cpp  cluster_subscriber.cpp
foros_inspector/: CHANGELOG.rst  CMakeLists.txt  package.xml
foros_inspector/src/: cluster_info.hpp  colors.hpp  inspector.cpp  inspector.hpp  main.cpp  node_info.hpp  terminal_utils.hpp
foros_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
foros_msgs/msg/: Inspector.msg
foros_msgs/srv/: AppendEntries.srv  RequestVote.srv
fsros/: CMakeLists.txt  Doxyfile  package.xml
fsros/include/: node_cluster.hpp  node_cluster_impl.hpp
fsros/include/akit/failsafe/fsros/: cluster_node.hpp  cluster_node_interface.hpp  cluster_node_options.hpp  cluster_node_publisher.hpp  cluster_node_service.hpp  cluster_node_template.hpp  common.hpp  lifecycle_listener.hpp  node_cluster.hpp
fsros/include/akit/fsros/: node_cluster.hpp
fsros/src/: cluster_node.cpp  cluster_node_impl.cpp  cluster_node_impl.hpp  cluster_node_options.cpp  node_cluster.cpp  node_cluster_impl.cpp  node_cluster_impl.hpp
fsros/src/common/: context.cpp  context.hpp  node_util.cpp  node_util.hpp  observable.hpp  observer.hpp  state_machine.hpp  void_callback.hpp
fsros/src/lifecycle/: event.hpp  state.cpp  state.hpp  state_machine.hpp  state_type.hpp
fsros/src/lifecycle/state/: active.cpp  active.hpp  inactive.cpp  inactive.hpp  standby.cpp  standby.hpp
fsros/src/raft/: context.cpp  context.hpp  event.hpp  other_node.cpp  other_node.hpp  raft_state_machine.cpp  raft_state_machine.hpp  state.cpp  state.hpp  state_machine.cpp  state_machine.hpp  state_machine_interface.hpp  state_transition.hpp  state_type.hpp
fsros/src/raft/event/: elected.hpp  event.hpp  event_listener.hpp  event_observer.cpp  event_observer.hpp  leadaer_discovered.hpp  started.hpp  terminated.hpp  timedout.hpp  vote_received.hpp
fsros/src/raft/state/: candidate.cpp  candidate.hpp  follower.cpp  follower.hpp  leader.cpp  leader.hpp  standby.cpp  standby.hpp  state.cpp  state.hpp  state_type.hpp
fsros/test/: CMakeLists.txt  test_cluster_node.cpp  test_lifecycle.cpp  test_lifecycle_state_machine.cpp  test_node_cluster.cpp  test_publisher.cpp  test_raft_state_machine.cpp  test_state_machine.cpp
fsros_examples/: CMakeLists.txt  package.xml
fsros_examples/src/: cluster_client.cpp  cluster_election.cpp  cluster_publisher.cpp  cluster_service.cpp  cluster_subscriber.cpp  clustering.cpp
fsros_interfaces/: CMakeLists.txt  package.xml
fsros_interfaces/srv/: AppendEntries.srv
fsros_msgs/: CMakeLists.txt  package.xml
include/: common.hpp  node_cluster.hpp
scripts/: coverage.sh
src/: node_cluster.cpp
