<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foros_inspector</name>
  <version>0.4.1</version>
  <description>Fail over ROS inspector</description>
  <maintainer email="wonguk.jeong@42dot.ai">Wonguk Jeong</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>foros_msgs</depend>
  <depend>libncurses-dev</depend>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>